test/CXX/symex/libc++/simple_exception_fail.cpp
// REQUIRES: not-msan
// Disabling msan because it times out on CI
// REQUIRES: libcxx
// REQUIRES: eh-cxx
// RUN: %clangxx %s -emit-llvm %O0opt -c -std=c++11 %libcxx_includes -g -nostdinc++ -o %t1.bc
// RUN: rm -rf %t.klee-out
// RUN: %klee --output-dir=%t.klee-out --libc=uclibc --libcxx %t1.bc 2>&1 | FileCheck %s

#include <stdexcept>

int main(int argc, char **args) {
  throw std::runtime_error("foo");
}
// CHECK: terminating {{.*}} uncaught exception of type std::runtime_error: foo